--- a/Portfolio/index.css
+++ b/Portfolio/index.css
@@ -1,3 +1,9 @@
+@media (prefers-color-scheme: light) {
+  :root {
+    color: #213547;
+    background-color: #ffffff;
+  }
+}
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -7,7 +13,7 @@
   background-color: #242424;
 }
 
-body {
+Nav {
   margin: 0;
   display: flex;
   flex-direction: column;
@@ -19,13 +25,6 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
 }
 
 /*# sourceMappingURL=index.css.map */
