--- a/Portfolio/src/styling/index.scss
+++ b/Portfolio/src/styling/index.scss
@@ -1,3 +1,10 @@
+@media (prefers-color-scheme: light) {
+  :root {
+    color: #213547;
+    background-color: #ffffff;
+  }
+}
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -8,7 +15,7 @@
   background-color: #242424;
 }
 
-body {
+Nav {
   margin: 0;
   display: flex;
   flex-direction: column;
@@ -20,11 +27,4 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
 }
