--- a/Portfolio/src/styling/navBar.scss
+++ b/Portfolio/src/styling/navBar.scss
@@ -16,3 +16,55 @@ Nav ul h2 {
   display: flex;
   margin: 20px;
 }
+
+@property --rotate {
+  syntax: "<angle>";
+  inherits: false;
+  initial-value: 0deg;
+}
+
+button {
+  --red: #ff0000;
+  --radius: 50px;
+  --roate: 0deg;
+  padding: 20px 30px;
+  border-radius: var(--radius);
+  background: var(--red);
+  color: rgba(255, 255, 255, 0.87);
+  font-weight: 500;
+  font-size: 20px;
+  border: 0;
+  position: relative;
+  overflow: hidden;
+  .fancy {
+    position: absolute;
+    inset: 0;
+    &:before {
+      content: "";
+      background: conic-gradient(
+        from var(--rotate),
+        transparent 0%,
+        white 5%,
+        transparent 10%
+      );
+      position: absolute;
+      inset: absolute;
+      animation: rotate 2s linear infinite;
+    }
+    &:after {
+      content: "";
+      background: --red;
+      position: absolute;
+      inset: 2px;
+      border-radius: calc(var(--radius) - 2px);
+    }
+  }
+  #text {
+    position: relative;
+  }
+  @keyframes rotate {
+    to {
+      --rotate: 360deg;
+    }
+  }
+}
