--- a/Portfolio/index.css
+++ b/Portfolio/index.css
@@ -91,4 +91,30 @@ button #text {
   margin: 10px 0;
 }
 
+.contact-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-color: #3a3a3a;
+  color: white;
+}
+.contact-container h1 {
+  font-size: 2.5rem;
+  margin-bottom: 1rem;
+}
+.contact-container p {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+.contact-container a {
+  color: white;
+  text-decoration: none;
+  font-size: 1.5rem;
+}
+.contact-container a:hover {
+  color: #3a3a3a;
+}
+
 /*# sourceMappingURL=index.css.map */
