--- a/Portfolio/index.css
+++ b/Portfolio/index.css
@@ -99,6 +99,8 @@ button #text {
   height: 100vh;
   background-color: #3a3a3a;
   color: white;
+  border-radius: 15px;
+  border: 2px solid #ffffff;
 }
 .contact-container h1 {
   font-size: 2.5rem;
@@ -115,6 +117,40 @@ button #text {
 }
 .contact-container a:hover {
   color: #3a3a3a;
+}
+
+.contact-form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+.contact-form-container .contact-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 50%;
+}
+.contact-form-container .contact-form .form-control {
+  width: 100%;
+  margin-bottom: 1rem;
+  padding: 0.5rem;
+  font-size: 1.5rem;
+  border: none;
+}
+.contact-form-container .contact-form button {
+  padding: 0.5rem 1rem;
+  font-size: 1.5rem;
+  background-color: red;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+.contact-form-container .contact-form button:hover {
+  background-color: black;
+  color: white;
 }
 
 /*# sourceMappingURL=index.css.map */
