--- a/Portfolio/src/styling/navBar.scss
+++ b/Portfolio/src/styling/navBar.scss
@@ -1,128 +1,14 @@
-Nav {
-  margin: 0;
-  padding: 0;
-  min-width: 320px;
-  min-height: 100px;
-}
-
-Nav ul {
+.nbDateTime {
+  cursor: default;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin: 0;
-  padding: 0;
+  gap: 10px;
 }
-Nav ul h2 {
-  display: flex;
-  margin: 20px;
-}
-@mixin property(
-  $variable: variable,
-  $syntax: "<angle>",
-  $inherits: true,
-  $initial-value: 0
-) {
-  @property --#{$variable} {
-    syntax: $syntax;
-    inherits: $inherits;
-    initial-value: $initial-value;
-  }
-}
-
-@include property($variable: rotate, $syntax: "<angle>", $inherits: 0deg);
-
-// button {
-//   --red: #ff0000;
-//   --radius: 50px;
-//   --rotate: 0deg;
-//   padding: 20px 30px;
-//   border-radius: var(--radius);
-//   background: var(--red);
-//   color: rgba(255, 255, 255, 0.87);
-//   font-weight: 500;
-//   font-size: 20px;
-//   border: 0;
-//   position: relative;
-//   overflow: hidden;
-//   .fancy {
-//     position: absolute;
-//     inset: 0;
-//     &:before {
-//       content: "";
-//       background: conic-gradient(
-//         from var(--rotate),
-//         transparent 0%,
-//         white 5%,
-//         transparent 10%
-//       );
-//       position: absolute;
-//       inset: absolute;
-//       animation: rotate 2s linear infinite;
-//     }
-//     &:after {
-//       content: "";
-//       background: --red;
-//       position: absolute;
-//       inset: 2px;
-//       border-radius: calc(var(--radius) - 2px);
-//     }
-//   }
-//   #text {
-//     position: relative;
-//   }
-//   @keyframes rotate {
-//     to {
-//       --rotate: 360deg;
-//     }
-//   }
-// }
 button {
-  --red: #ff0000;
-  --radius: 50px;
-  --rotate: 0deg;
-  padding: 20px 30px;
-  border-radius: var(--radius);
-  background: var(--red);
-  color: rgba(255, 255, 255, 0.87);
-  font-weight: 500;
-  font-size: 20px;
-  border: 0;
-  position: relative;
-  overflow: hidden;
-  cursor: pointer; // Add this line to change cursor on hover
-
-  &:hover {
-    cursor: pointer; // Ensure cursor changes on hover
-  }
-
-  .fancy {
-    position: absolute;
-    inset: 0;
-    &:before {
-      content: "";
-      background: conic-gradient(
-        from var(--rotate),
-        transparent 0%,
-        white 5%,
-        transparent 10%
-      );
-      position: absolute;
-      inset: 0; // Change from 'absolute' to '0'
-      border-radius: var(--radius);
-      animation: rotate 2s linear infinite;
-    }
-    &:after {
-      content: "";
-      background: var(--red);
-      position: absolute;
-      inset: 2px;
-      border-radius: calc(var(--radius) - 2px);
-    }
-  }
-}
-
-@keyframes rotate {
-  to {
-    --rotate: 360deg;
-  }
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  color: white;
+  font-size: 1.5em;
+  cursor: pointer;
 }
