--- a/Portfolio/index.css
+++ b/Portfolio/index.css
@@ -13,20 +13,54 @@
   background-color: #242424;
 }
 
-.nbDateTime {
-  cursor: default;
-  display: flex;
-  gap: 10px;
+.nav {
+  position: fixed;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 250px;
+  background-color: #242424;
+  transition: width 0.3s;
+  overflow: hidden;
 }
-
-button {
-  margin: 0;
-  padding: 0;
+.nav.collapsed {
+  width: 50px;
+}
+.nav .toggle-button {
+  position: absolute;
+  top: 10px;
+  right: -25px;
+  background-color: #242424;
   border: none;
-  background-color: transparent;
   color: white;
-  font-size: 1.5em;
   cursor: pointer;
+  font-size: 1.5em;
+  padding: 5px;
+  z-index: 1;
+}
+.nav .nbDateTime-container {
+  padding: 10px;
+}
+.nav .nav-links {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+}
+.nav .nav-links .navLink {
+  margin: 10px 0;
+}
+.nav .nav-links .navLink button {
+  width: 100%;
+  text-align: left;
+  background-color: transparent;
+  border: none;
+  color: white;
+  font-size: 1.2em;
+  cursor: pointer;
+  padding: 10px;
+}
+.nav .nav-links .navLink button:hover {
+  background-color: #3a3a3a;
 }
 
 .home-container {
