--- a/Portfolio/src/styling/navBar.scss
+++ b/Portfolio/src/styling/navBar.scss
@@ -1,14 +1,69 @@
-.nbDateTime {
-  cursor: default;
-  display: flex;
-  gap: 10px;
-}
-button {
-  margin: 0;
-  padding: 0;
-  border: none;
-  background-color: transparent;
-  color: white;
-  font-size: 1.5em;
-  cursor: pointer;
+// .nbDateTime {
+//   cursor: default;
+//   display: flex;
+//   gap: 10px;
+// }
+// button {
+//   margin: 0;
+//   padding: 0;
+//   border: none;
+//   background-color: transparent;
+//   color: white;
+//   font-size: 1.5em;
+//   cursor: pointer;
+// }
+
+.nav {
+  position: fixed;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 250px;
+  background-color: #242424;
+  transition: width 0.3s;
+  overflow: hidden;
+
+  &.collapsed {
+    width: 50px;
+  }
+
+  .toggle-button {
+    position: absolute;
+    top: 10px;
+    right: -25px;
+    background-color: #242424;
+    border: none;
+    color: white;
+    cursor: pointer;
+    font-size: 1.5em;
+    padding: 5px;
+    z-index: 1;
+  }
+
+  .nbDateTime-container {
+    padding: 10px;
+  }
+
+  .nav-links {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+
+    .navLink {
+      margin: 10px 0;
+      button {
+        width: 100%;
+        text-align: left;
+        background-color: transparent;
+        border: none;
+        color: white;
+        font-size: 1.2em;
+        cursor: pointer;
+        padding: 10px;
+        &:hover {
+          background-color: #3a3a3a;
+        }
+      }
+    }
+  }
 }
