--- a/Portfolio/src/styling/navBar.scss
+++ b/Portfolio/src/styling/navBar.scss
@@ -1,18 +1,3 @@
-// .nbDateTime {
-//   cursor: default;
-//   display: flex;
-//   gap: 10px;
-// }
-// button {
-//   margin: 0;
-//   padding: 0;
-//   border: none;
-//   background-color: transparent;
-//   color: white;
-//   font-size: 1.5em;
-//   cursor: pointer;
-// }
-
 .nav {
   position: fixed;
   left: 0;
@@ -42,6 +27,11 @@
 
   .nbDateTime-container {
     padding: 10px;
+  }
+  .nbDateTime {
+    cursor: default;
+    display: flex;
+    gap: 10px;
   }
 
   .nav-links {
