--- a/Portfolio/index.css
+++ b/Portfolio/index.css
@@ -13,23 +13,32 @@
   background-color: #242424;
 }
 
+.main-content {
+  margin-left: 200px;
+  transition: margin-left 0.3s;
+}
+.nav.collapsed + .main-content {
+  margin-left: 70px;
+}
+
 .nav {
   position: fixed;
   left: 0;
   top: 0;
   height: 100%;
-  width: 250px;
+  width: 200px;
   background-color: #242424;
   transition: width 0.3s;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 .nav.collapsed {
-  width: 50px;
+  width: 70px;
 }
 .nav .toggle-button {
-  position: absolute;
   top: 10px;
-  right: -25px;
   background-color: #242424;
   border: none;
   color: white;
@@ -52,7 +61,7 @@
   padding: 10px;
 }
 .nav .nav-links .navLink {
-  margin: 10px 0;
+  margin: 5px 0;
 }
 .nav .nav-links .navLink button {
   width: 100%;
@@ -63,9 +72,15 @@
   font-size: 1.2em;
   cursor: pointer;
   padding: 10px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 .nav .nav-links .navLink button:hover {
   background-color: #3a3a3a;
+}
+.nav .nav-links .navLink button svg {
+  font-size: 1.5em;
 }
 
 .home-container {
