--- a/Portfolio/src/styling/navBar.scss
+++ b/Portfolio/src/styling/navBar.scss
@@ -3,19 +3,20 @@
   left: 0;
   top: 0;
   height: 100%;
-  width: 250px;
+  width: 200px;
   background-color: #242424;
   transition: width 0.3s;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 
   &.collapsed {
-    width: 50px;
+    width: 70px;
   }
 
   .toggle-button {
-    position: absolute;
     top: 10px;
-    right: -25px;
     background-color: #242424;
     border: none;
     color: white;
@@ -28,6 +29,7 @@
   .nbDateTime-container {
     padding: 10px;
   }
+
   .nbDateTime {
     cursor: default;
     display: flex;
@@ -40,7 +42,8 @@
     padding: 10px;
 
     .navLink {
-      margin: 10px 0;
+      margin: 5px 0;
+
       button {
         width: 100%;
         text-align: left;
@@ -50,8 +53,16 @@
         font-size: 1.2em;
         cursor: pointer;
         padding: 10px;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+
         &:hover {
           background-color: #3a3a3a;
+        }
+
+        svg {
+          font-size: 1.5em;
         }
       }
     }
