--- a/Portfolio/src/styling/main.scss
+++ b/Portfolio/src/styling/main.scss
@@ -16,6 +16,7 @@
 }
 
 .main-content {
+  padding-top: 10px;
   margin-left: 200px; // Default margin when nav is expanded
   transition: margin-left 0.3s;
 
