--- a/Portfolio/index.css
+++ b/Portfolio/index.css
@@ -164,4 +164,28 @@
   color: white;
 }
 
+.projects-container {
+  background-color: #3a3a3a;
+  padding: 20px;
+  border-radius: 15px;
+  border: 2px solid #ffffff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+.projects-container h1,
+.projects-container p {
+  margin: 10px 0;
+}
+
+.about-container {
+  background-color: #3a3a3a;
+  padding: 20px;
+  border-radius: 15px;
+  border: 2px solid #ffffff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+.about-container h1,
+.about-container p {
+  margin: 10px 0;
+}
+
 /*# sourceMappingURL=index.css.map */
