--- a/Portfolio/src/styling/contactMe.scss
+++ b/Portfolio/src/styling/contactMe.scss
@@ -24,6 +24,11 @@
       color: #3a3a3a;
     }
   }
+  label {
+    font-size: 1.5rem;
+    display: block;
+    text-align: left;
+  }
 }
 
 .contact-form-container {
