--- a/Portfolio/index.css
+++ b/Portfolio/index.css
@@ -133,6 +133,8 @@
   font-size: 1.5rem;
   display: block;
   text-align: left;
+  width: 100%;
+  margin-bottom: 0.5rem;
 }
 
 .contact-form-container {
