--- a/Portfolio/index.css
+++ b/Portfolio/index.css
@@ -13,13 +13,37 @@
   background-color: #242424;
 }
 
+html,
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
 .main-content {
-  padding-top: 10px;
+  padding-top: 90px;
   margin-left: 200px;
   transition: margin-left 0.3s;
+  padding-bottom: 80px;
 }
 .nav.collapsed + .main-content {
   margin-left: 70px;
+}
+
+.banner {
+  width: 100%;
+  background-color: #242424;
+  color: white;
+  text-align: center;
+  padding: 20px 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
+}
+.banner h1 {
+  margin: 0;
+  font-size: 2rem;
 }
 
 .nav {
@@ -34,6 +58,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  z-index: 999;
 }
 .nav.collapsed {
   width: 70px;
@@ -88,6 +113,43 @@
 }
 .nav .nav-links .nav-link button svg {
   font-size: 1.5em;
+}
+
+.footer {
+  background-color: rgba(48, 133, 189, 0.445);
+  color: white;
+  padding: 20px;
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  z-index: 999;
+}
+.footer .footer-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.footer .footer-content h3 {
+  margin-bottom: 10px;
+}
+.footer .footer-content .social-links {
+  display: flex;
+  gap: 20px;
+}
+.footer .footer-content .social-links a {
+  color: white;
+  font-size: 2em;
+  transition: color 0.3s;
+}
+.footer .footer-content .social-links a:hover {
+  color: #0077b5;
+}
+.footer .footer-content .social-links a:nth-child(2):hover {
+  color: #3b5998;
+}
+.footer .footer-content .social-links a:nth-child(3):hover {
+  color: rebeccapurple;
 }
 
 .home-container {
