--- a/Portfolio/src/styling/home.scss
+++ b/Portfolio/src/styling/home.scss
@@ -1,12 +1,64 @@
-.home-container {
-  background-color: #3a3a3a; // Lighter grey background
-  padding: 20px;
-  border-radius: 15px;
-  border: 2px solid #ffffff; // Bubble border color
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+@media only screen and (max-width: 480px) {
+}
 
-  h1,
-  p {
-    margin: 10px 0;
+//Tablet View
+
+@media only screen and (min-width: 768px) {
+  .home-container {
+    display: flex;
+    justify-content: center;
+    background-color: #3a3a3a; // Lighter grey background
+    padding: 20px;
+    border-radius: 15px;
+    border: 2px solid #ffffff; // Bubble border color
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  }
+  .home-paragraph {
+    display: flex;
+    color: #ffffff; // White text
+    font-size: 1.2em;
+    align-items: center;
+    text-align: center;
+    padding: 20px;
+    width: 400px;
+  }
+  .home-image {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 10px;
+    border: 2px solid #ffffff; // Bubble border color
+    border-radius: 5px;
+    width: 300px;
+  }
+}
+
+//Desktop View
+
+@media only screen and (min-width: 980px) {
+  .home-container {
+    display: flex;
+    justify-content: center;
+    background-color: #3a3a3a; // Lighter grey background
+    padding: 20px;
+    border-radius: 15px;
+    border: 2px solid #ffffff; // Bubble border color
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  }
+  .home-paragraph {
+    display: flex;
+    flex-direction: column;
+    color: #ffffff; // White text
+    align-items: center;
+    text-align: center;
+    padding: 20px;
+    width: 400px;
+  }
+  .home-image {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 10px;
+    border: 2px solid #ffffff; // Bubble border color
+    border-radius: 5px;
+    width: 400px;
   }
 }
